--- a/examples/CustomControls/app/src/main/res/layout/activity_main.xml
+++ b/examples/CustomControls/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,35 @@
     tools:context=".MainActivity">
 
     <com.xrubio.customcontrols.MyCompoundControlView
+        android:id="@+id/my_compound_control"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.xrubio.customcontrols.MyCustomControlView
+        android:id="@+id/my_custom_control1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_compound_control"
+        android:paddingTop="20dp"
+        android:background="@android:color/holo_blue_light"
+        />
+
+    <com.xrubio.customcontrols.MyCustomControlView
+        android:id="@+id/my_custom_control2"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_custom_control1"
+        app:radius="50dp"
+        android:paddingTop="20dp"
+        android:background="@android:color/holo_blue_dark"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
